# ATWI80D

./: ATWI80DConfig.h.in  CMakeLists.txt
assets/: Artefact.xml  ArtefactNotify.xml  ArtefactSpline.xml  Backgrounds.xml  BagEffects.xml  BagFly.xml  Candle.xml  Candle_last.xml  ChinaBigFlame.xml  ChipsAnim.xml  CountriesOnMap.xml  CountryColor.xml  CountryRain.xml  Cross_GUI.xml  Dialog.lua  DialogResource.xml  Dialog_GUI.xml  Dialogs.xml  EgyptFlame.xml  FieldScopeDxDy.xml  Firework.xml  Flames.xml  GUI.xml  GUI_Resource.xml  GameField_GUI.xml  GameField_GUI_ss.xml  GameInfo.xml  GameResource.xml  GameRings.xml  GameplayConst.xml  GfxFileInfo.xml  HelpData.xml  Hint_GUI.xml  IndiaFlame.xml  IntroData.xml  JapanWaterFall.xml  JuleBook_GUI.xml  KeyMap.xml  LevNameMap.xml  LondonPena.xml  (+52 more)
assets/JuleBook/: page.ASE
assets/Sumka/: 1.ASE  left.ASE  list1.ase  list2.ase  notebook.ASE  page.ASE
assets/Textures/Chips/: vssver.scc
assets/Textures/GUI/: vssver.scc
assets/font/: BagTitle.txt  BigScores.txt  BonusHint.txt  Dialog.txt  GameTitle.txt  Interface14Bold.txt  Interface18.txt  Interface20.txt  Interface22.txt  Letter.txt  MapTitle.txt  NoteFont.txt  Rus.txt  ScoreBig.txt  arial.txt  bonus.txt  hint.txt  scores.txt  small.txt
src/: Anm.h  AnmChips.cpp  AnmChips.h  Chip.cpp  Chip.h  Game.cpp  Game.h  GameLayers.h  Level.cpp  Level.h  Tile.cpp  Tile.h  errerr  main.cpp
